# matroskin

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  Readme.md  build.rs  codebook.toml
.example-response/: get.device.info.json  get.system.setting.json
.github/workflows/: deploy.yml  push.yml
src/: account.rs  actor.rs  auth_data.rs  command.rs  error.rs  lib.rs  main.rs  password.rs  request.rs  response.rs
src/actor/: message.rs  process.rs  read.rs  send.rs
src/command/: get_device_custom_data.rs  get_device_info.rs  get_fan_settings.rs  get_miner_setting.rs  get_system_setting.rs  set_miner_fastboot.rs  set_miner_pools.rs
