[package]
name = "matroskin"
description = """
whatsminer api client lib
"""
version = "0.0.3"
edition = "2024"
readme = "README.md"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "https://github.com/TOwInOK/matroskin"
license = "MIT OR Apache-2.0"
keywords = ["whatsminer", "api", "client", "mining", "blockchain"]
categories = ["api-bindings", "network-programming"]


[dependencies]
aes = { version = "0.8", features = ["zeroize"] }
cipher = { version = "0.4.4", features = ["block-padding"] }
base64_light = "0.1.5"
generic-array = { version = "1.3.5", features = ["zeroize"] }
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha256 = "1.6.0"
zeroize = { version = "1.8.2", features = ["derive", "serde"] }

thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["time",  "net", "sync", "tracing", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }


[package.metadata.docs.rs]
all-features = true
features = ["all"]
rustdoc-args = ["--html-in-header", ".content/favicon.html"]
